carry out testing on static build and fix issue with svg Heading lagging on mobile

--- a/app/components/navigation/Menu.module.css
+++ b/app/components/navigation/Menu.module.css
@@ -71,4 +71,5 @@
   background-size: contain;
   background-repeat: repeat-x;
   transition: background-position 1s ease;
+  transform: translate3d(0, 0, 0);
 }
